--- a/Assignment1/seungeun/Assignment1.ipynb
+++ b/Assignment1/seungeun/Assignment1.ipynb
@@ -82,8 +82,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## How to Linux (Basic commands of Linux)
-         ### Almost every Deep Learning Research is conducted based on Linux, including Colab."
+        "## How to Linux (Basic commands of Linux)",
+        "### Almost every Deep Learning Research is conducted based on Linux, including Colab."
       ],
       "metadata": {
         "id": "4a4q9MievMjx"
