--- a/Assignment6/seungeun/Assignment6-3.ipynb
+++ b/Assignment6/seungeun/Assignment6-3.ipynb
@@ -34,7 +34,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 3. Multi-class Classification w/ pre-trained ResNet model -- custom dataset\n",
+        "## 3. Image Classification w/ pre-trained ResNet model -- custom dataset\n",
         "*     Custom dataset: https://www.kaggle.com/datasets/ajayrana/hymenoptera-data\n",
         "*     Download the dataset and unzip it as always.\n",
         "\n"
